--- a/Plugin/src/main/res/values/strings.xml
+++ b/Plugin/src/main/res/values/strings.xml
@@ -32,5 +32,6 @@
     <string name="use_dark_theme">Dark Theme</string>
     <string name="use_byte">Bytes</string>
     <string name="plugin_permissions_request">This plugin requires access to list JuiceSSH connections, and to connect to them.</string>
+    <string name="uptime" >Uptime: </string>
 
 </resources>
